[gd_scene load_steps=5 format=3 uid="uid://duvfj462hwsg6"]

[ext_resource type="Texture2D" uid="uid://7jluw5jydfhw" path="res://Textures/ship.png" id="1"]
[ext_resource type="Script" uid="uid://bwumgrbx3vy7n" path="res://Player/Player.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://b5eyt1fxdf0lk" path="res://Textures/shield.png" id="3"]

[sub_resource type="CircleShape2D" id="1"]
radius = 36.0139

[node name="Player" type="Area2D"]
script = ExtResource("2")
speed = 300.0
fireDelay = 0.3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 100
texture = ExtResource("1")

[node name="FireDelayTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="Shield" type="Sprite2D" parent="."]
position = Vector2(-1, -1)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3")

[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
